# LaTeXTextOverlay

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: Example_01.ovito
src/LaTeXTextOverlay/: __init__.py
tests/: test.ovito  test_viewport_overlay.py
