[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LaTeXTextOverlay"
version = "2024.1"
description = "Render LaTeX text in the viewport"
keywords = ["ovito", "ovito-extension"]
authors = [{name = "Daniel Utt", email = "utt@ovito.org"}]
maintainers = [{name = "Daniel Utt", email = "utt@ovito.org"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "ovito >= 3.9.2",
    "matplotlib >= 3.4.0",
]

[project.urls]
repository = "https://github.com/nnn911/LaTeXTextOverlay"

[project.entry-points.'OVITO.ViewportOverlay']
"LaTeX Text Overlay" = "LaTeXTextOverlay:LaTeXTextOverlay"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:module 'sre_parse' is deprecated:DeprecationWarning",
    "ignore:module 'sre_constants' is deprecated:DeprecationWarning",
]
